src/test/resources/amyc/typer/failing/MatchError4.amy
object MatchError
  abstract class Foo
  case class Bar(i: Int(32)) extends Foo

  Bar(1) match {
    case true => ()
  }
end MatchError
